--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "axis": "^1.0.0",
     "bootstrap": "^5.3.3",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
