--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^1.7.2",
     "axis": "^1.0.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
