[#161]🩹 fix : vercel.json 일부 수정

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrites": [
+    "routes": [
       {
-        "source": "/api/(.*)",
-        "destination": "https://api.petzoa.site/api/$1"
+        "src": "/api/(.*)",
+        "dest": "https://api.petzoa.site/api/$1"
       }
     ]
   }
